# DiskOracle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  config.h.in
include/: commands.h  common_headers.h  drive_info.h  info.h  interactive.h  logging.h  nvme_defines.h  nvme_export.h  nvme_health_diag.h  nvme_hybrid.h  nvme_orchestrator.h  pal.h  pal_shared_nvme.h  pal_types.h  predict.h  project_config.h  report.h  smart.h  smart_ata.h  style.h  surface.h  ui.h
src/: commands.c  info.c  interactive.c  interactive.h  logging.c  main.c  nvme_alerts.c  nvme_benchmark.c  nvme_cache.c  nvme_export.c  nvme_orchestrator.c  pal.c  pal_linux.c  pal_macos.c  pal_shared_nvme.c  pal_windows.c  predict.c  report.c  report.h  smart.c  smart_ata.c  style.c  surface.c  ui.c
tests/: test_report.c
